fix(profile): button alignment

--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -30,5 +30,6 @@
     outline: none;
     background: transparent;
     border: none;
+    margin: auto;
   }
 }
